<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:layout_height="100dp">

    <RelativeLayout
        android:id="@+id/fatura"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <View
            android:id="@+id/topoLinha"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/preto"
            android:layout_marginLeft="14dp" />

        <ImageView
            android:id="@+id/ivlinha_tempo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/topoLinha"/>

        <View
            android:id="@+id/bottonLinha"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:background="@color/preto"
            android:layout_below="@id/ivlinha_tempo"
            android:layout_marginLeft="14dp" />


        <RelativeLayout
            android:layout_toRightOf="@id/ivlinha_tempo"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerVertical="true">


            <TextView
                android:id="@+id/tvLocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvPreco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco"
                android:textSize="20dp"
                android:layout_alignParentBottom="true"
                android:textStyle="bold"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/tvData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>


    </RelativeLayout>


</LinearLayout>